[package]
name = "feature-gate-multisig-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rand = "0.8"
borsh = "1.5.7"
colored = "2.2.0"
dialoguer = "0.11.0"
indicatif = "0.17.11"
eyre = "0.6.12"
tabled = "0.15"

solana-sdk = "2.0.0"
solana-client="2.0.0"
solana-clap-v3-utils = "2.2.0"